Renaming variables and verbosing

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data pre-processing for Machine Learning"
+    "# Data pre-processing (or data preparation) for Machine Learning\n",
+    "\n",
+    "Before applying the model, the data should be cleaned, preprocessed, and transformed into a format that can be used by the algorithm.\n",
+    "\n",
+    "The focus here is to build **X** and **y**, where:\n",
+    "* **X** is the independent feature, in the form of an N*M matrix, where N is the number of observations and M is the number of features.\n",
+    "* **y** is a N vector corresponding to predicted classes for each of the N observations."
    ]
   },
   {
@@ -16,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +249,7 @@
        "[17521 rows x 11 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +325,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +356,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +611,7 @@
        "[17521 rows x 11 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +647,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +891,7 @@
        "[12700 rows x 11 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1133,7 @@
        "[12698 rows x 11 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1257,7 @@
        "freq        2.00000      3.000000      6.0000    138.0      2.000000  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1297,74 +1303,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9638/626383233.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['Day']   = df_withoutNaNandUnits['Day'].astype(int)\n",
-      "/tmp/ipykernel_9638/626383233.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['Hour']  = df_withoutNaNandUnits['Hour'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:6: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['NEE']   = df_withoutNaNandUnits['NEE'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['LE']    = df_withoutNaNandUnits['LE'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['H']     = df_withoutNaNandUnits['H'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:9: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['Rg']    = df_withoutNaNandUnits['Rg'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:10: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['Tair']  = df_withoutNaNandUnits['Tair'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:11: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['Tsoil'] = df_withoutNaNandUnits['Tsoil'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:12: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['rH']    = df_withoutNaNandUnits['rH'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_withoutNaNandUnits['VPD']   = df_withoutNaNandUnits['VPD'].astype(float)\n",
-      "/tmp/ipykernel_9638/626383233.py:14: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10476/626383233.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1596,7 +1602,7 @@
        "[12698 rows x 11 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1857,7 @@
        "max        1.002762  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2144,7 @@
        "[12695 rows x 11 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,12 +2172,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4.2: Correlation analysis"
+    "### Step 4.2: Feature Extraction\n",
+    "\n",
+    "We have to extract which are the relevant features that influence the target. This can be done using various techniques, such as correlation analysis, information gain, and principal component analysis.\n",
+    "\n",
+    "In a Classification Model, Feature Selection is typically done to remove redundant variables. In fact, features that are highly correlated with each other can be removed as they do not provide additional information for classification. But in our case, what I need is exactly this: find highly correlated variables with the target to train better the model. This can be done this way, but I acknowledge that a PCA would probably work better.\n",
+    "\n",
+    "The dataset contains 8 features ('Day', 'Hour', 'Rg', 'Tair', 'Tsoil', 'rH', 'VPD', 'Ustar') that may influence the targets ('NEE', 'LE', 'H'). However, not every of them actually influence the targets.\n",
+    "\n",
+    "To have an idea of which of them in fact do, I make a **Correlation Analysis**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2188,12 +2202,6 @@
     }
    ],
    "source": [
-    "'''\n",
-    "Data is now clean\n",
-    "But it is important to know better the dataset\n",
-    "We can face overfitting issues or extreme processing efforts if having redundant data\n",
-    "Lets display de correlation matrix to check that redundancy\n",
-    "'''\n",
     "import seaborn as sns\n",
     " \n",
     "plt.figure(dpi=100)\n",
@@ -2203,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2251,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2297,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2524,7 +2532,7 @@
        "[11361 rows x 11 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2546,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2592,12 +2600,12 @@
     "The goal is to predict NEE, so NEE will be the target --> Y\n",
     "'''\n",
     "X = df_clean.drop(columns =['Day', 'Hour', 'NEE', 'LE', 'H', 'Tair', 'Tsoil', 'VPD', 'Ustar'])\n",
-    "Y = df_clean.drop(columns =['Day', 'Hour', 'LE', 'H', 'Rg', 'Tair', 'Tsoil', 'rH', 'VPD', 'Ustar'])\n",
+    "y = df_clean.drop(columns =['Day', 'Hour', 'LE', 'H', 'Rg', 'Tair', 'Tsoil', 'rH', 'VPD', 'Ustar'])\n",
     "X_later = df_later.drop(columns =['Day', 'Hour', 'NEE', 'LE', 'H', 'Tair', 'Tsoil', 'VPD', 'Ustar'])\n",
-    "Y_later = df_later.drop(columns =['Day', 'Hour', 'LE', 'H', 'Rg', 'Tair', 'Tsoil', 'rH', 'VPD', 'Ustar'])\n",
+    "y_later = df_later.drop(columns =['Day', 'Hour', 'LE', 'H', 'Rg', 'Tair', 'Tsoil', 'rH', 'VPD', 'Ustar'])\n",
     "print(X)\n",
     "print(type(X))\n",
-    "print(Y)"
+    "print(y)"
    ]
   },
   {
@@ -2621,7 +2629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6: Feature scaling\n",
+    "## Step 6: Feature scaling (Data transformation)\n",
     "This procedure is required when the features have different scales and the algorithm that is going to be used is sensitive to the scale of the features, such as k-nearest neighbors or neural networks.\n",
     "\n",
     "### Absolute Maximum Scaling\n",
@@ -2673,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2682,7 +2690,7 @@
        "'from sklearn.preprocessing import MinMaxScaler\\n\\nscaling = MinMaxScaler(feature_range=(0, 1)) # The MinMaxScaler is initialized\\nX_rescaled = scaling.fit_transform(X) # learning the statistical parameters for each of the data and transforming\\nX_rescaled\\n\\n\\nfrom sklearn.preprocessing import StandardScaler\\n\\nscaling = StandardScaler().fit(X)\\nX_rescaled = scaling.transform(X)\\nX_rescaled'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2714,14 +2722,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "X.to_pickle('X.pkl')\n",
-    "Y.to_pickle('Y.pkl')\n",
+    "y.to_pickle('y.pkl')\n",
     "X_later.to_pickle('X_later.pkl')\n",
-    "Y_later.to_pickle('Y_later.pkl')\n"
+    "y_later.to_pickle('y_later.pkl')\n"
    ]
   },
   {
